--- a/frontend/web/style/scss/templates/_review.scss
+++ b/frontend/web/style/scss/templates/_review.scss
@@ -7,7 +7,7 @@
 		left:0px;
 		position:absolute;
 		content:"";
-		background: url("../images/bg/bg-2.jpg") no-repeat 50% 50%;
+		background: url("../../image_1/123.png") no-repeat 50% 50%;
 	}
 
 	.slick-dots{
