--- a/frontend/web/style/css/style.css
+++ b/frontend/web/style/css/style.css
@@ -866,10 +866,10 @@ a:focus {
   width: 48%;
   height: 100%;
   top: 0;
-  left: 10px;
+  left: 0px;
   position: absolute;
   content: "";
-  background: url("../image_1/123.png") no-repeat 50% 50%;
+  background: url("../images/bg/bg-2.jpg") no-repeat 50% 50%;
 }
 
 .testimonial .slick-dots {
