--- a/frontend/web/style/css/style.css
+++ b/frontend/web/style/css/style.css
@@ -510,7 +510,8 @@ a:focus {
 
     .banner {
         min-height: 450px;
-        background: #fff !important;
+        background: url("../img/slider-bg-1.jpg");
+
     }
 }
 
@@ -522,7 +523,8 @@ a:focus {
 
     .banner {
         min-height: 450px;
-        background: #fff !important;
+        background: url("../img/slider-bg-1.jpg") no-repeat;
+
     }
 }
 
@@ -533,13 +535,15 @@ a:focus {
     }
 
     .banner {
-        background: #fff !important;
+        background: url("../img/slider-bg-1.jpg") no-repeat;
+
     }
 }
 
 @media (max-width: 992px) {
     .banner {
-        background: #fff !important;
+        background: url("../img/slider-bg-1.jpg") no-repeat;
+
     }
 }
 
