--- a/frontend/web/style/css/style.css
+++ b/frontend/web/style/css/style.css
@@ -397,28 +397,28 @@ a:focus {
     margin-top: 10px;
 }
 
-.dropdown .dropdown-menu {
-    position: absolute;
-    display: block;
-    background: #fff;
-    min-width: 240px;
-    top: 130%;
-    left: 0;
-    right: 0px;
-    opacity: 0;
-    padding: 0px;
-    visibility: hidden;
-    transition: all 0.3s ease-out 0s;
-    border: 0px;
-    border-top: 5px solid #e12454;
-    border-radius: 0px;
-}
+/*.dropdown .dropdown-menu {*/
+/*    position: absolute;*/
+/*    display: block;*/
+/*    background: #fff;*/
+/*    min-width: 240px;*/
+/*    top: 130%;*/
+/*    left: 0;*/
+/*    right: 0px;*/
+/*    opacity: 0;*/
+/*    padding: 0px;*/
+/*    visibility: hidden;*/
+/*    transition: all 0.3s ease-out 0s;*/
+/*    border: 0px;*/
+/*    border-top: 5px solid #e12454;*/
+/*    border-radius: 0px;*/
+/*}*/
 
-.dropdown:hover .dropdown-menu {
-    opacity: 1;
-    visibility: visible;
-    top: 115%;
-}
+/*.dropdown:hover .dropdown-menu {*/
+/*    opacity: 1;*/
+/*    visibility: visible;*/
+/*    top: 115%;*/
+/*}*/
 
 .dropdown .dropdown-item {
     padding: 13px 20px;
